[PyCharm] DataView (fix): Fixed displaying of null complex values in PyCharm Community. #PY-78609 Fixed
GitOrigin-RevId: 5aaeeb6b8843ef05531aee15e5b78c4f50e5964b